# datalake-newyork-taxi

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  readme.md
.github/: SECRETS.md
.github/workflows/: ci-cd.yml  python-quality.yml  terraform.yml
infra/envs/dev/: README.md  main.tf  outputs.tf  variables.tf
infra/modules/glue-catalog/: README.md  main.tf  outputs.tf  variables.tf
infra/modules/processing/: README.md  main.tf  outputs.tf  variables.tf
infra/modules/s3-datalake/: README.md  main.tf  outputs.tf  variables.tf
src/handler/: lambda_handler.py  test_lambda_handler.py
src/lambda/data-validator/: lambda_function.py
tests/: conftest.py  test_lambda_handler.py
